deployments/dev/users-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: users-ingress-restricted
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: http://authorization.default.svc.cluster.local:8000/verify
    nginx.ingress.kubernetes.io/auth-response-headers: X-JWT-UserId, X-JWT-Role, X-JWT-Username, X-JWT-Email
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.dev.pepeunlimited.com
      http:
        paths:
          - backend:
              serviceName: users
              servicePort: 8000
            path: /twirp/pepeunlimited.users.UserService/*
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: users-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.dev.pepeunlimited.com
      http:
        paths:
          - backend:
              serviceName: users
              servicePort: 8000
            path: /twirp/pepeunlimited.users.UserService/VerifySignIn
          - backend:
              serviceName: users
              servicePort: 8000
            path: /twirp/pepeunlimited.users.UseService/CreateUser
